cmake_minimum_required(VERSION 3.23)
project(end_class_project C)

set(CMAKE_C_STANDARD 99)

add_executable(end_class_project main.c pre_declaration.h basicfunc_realize.c Menu_R.c VIP_register_R.c Payment_R.c Rent_R.c Renturn_R.c Information_VIP_R.c manager_R.c Information_DVD_R.c manager_enum_R.c Information_member_R.c Information_DTrade_R.c Information_Vtrade_R.c Add_DVD_R.c manual_R.c)
